[gd_scene load_steps=3 format=3 uid="uid://gui123"]

[ext_resource type="Script" uid="uid://l0y7jifgu4bm" path="res://src/Scripts/UI/MainGUI.gd" id="1_gui"]
[ext_resource type="PackedScene" uid="uid://c3u372lrjivmc" path="res://src/Scenes/UI/SkillBar.tscn" id="2_skillbar"]

[node name="MainGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_gui")

[node name="DebugButton" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 41.0
focus_mode = 0
text = "üõ†Ô∏è ‰ΩúÂºä"

[node name="SkipButton" type="Button" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 41.0
focus_mode = 0
text = "‚è© Ë∑≥Ëøá"

[node name="WaveLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 60.0
offset_right = 45.0
offset_bottom = 83.0
grow_horizontal = 2
text = "Wave 1"
horizontal_alignment = 1

[node name="BottomPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="EnemyProgressBar" type="ProgressBar" parent="BottomPanel"]
modulate = Color(1, 0, 1, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="Label" type="Label" parent="BottomPanel/EnemyProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Enemies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResourceContainer" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HPBar" type="ProgressBar" parent="BottomPanel/ResourceContainer"]
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="BottomPanel/ResourceContainer/HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="FoodBar" type="ProgressBar" parent="BottomPanel/ResourceContainer"]
modulate = Color(1, 1, 0, 1)
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="BottomPanel/ResourceContainer/FoodBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaBar" type="ProgressBar" parent="BottomPanel/ResourceContainer"]
modulate = Color(0, 0, 1, 1)
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="BottomPanel/ResourceContainer/ManaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveTimeline" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
alignment = 1

[node name="DamageStats" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -150.0
offset_right = -10.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="DamageStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 30.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DamageStats/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="Label" parent="DamageStats"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
mouse_filter = 0
text = "Damage Stats"
horizontal_alignment = 1

[node name="SkillBar" parent="." instance=ExtResource("2_skillbar")]
layout_mode = 1
offset_left = -482.0
offset_top = -274.0
offset_right = -482.0
offset_bottom = -194.0

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "CORE DESTROYED"
horizontal_alignment = 1

[node name="RetryWaveButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 0.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Retry Wave"

[node name="NewGameButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 70.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "New Game"
